# my_begineer_tutorails

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: pub_sub_launch.py  record_bag.launch.py  test_publisher.launch.py
results/bags/publisher_recording/: metadata.yaml  publisher_recording_0.db3
src/: beginner_publisher.cpp  beginner_subscriber.cpp
test/: test_beginner_publisher.cpp
